tests/errors/syntax/namespace-unclosed.fn
---
Description: Namespace with opening brace but no close
Expected: compile error
---

namespace Broken
{

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
